--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
