--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
@@ -33,7 +34,7 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts -r dotenv/config start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
