--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
     "@date-io/date-fns": "^1.3.13",
+    "@devexpress/dx-react-chart": "2.7.4",
+    "@devexpress/dx-react-chart-material-ui": "2.7.4",
+    "@devexpress/dx-react-core": "2.7.4",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -12,6 +15,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
