--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "scripts": {
     "start": "react-scripts -r dotenv/config start",
-    "build": "react-scripts build",
+    "build": "node build/build.js && mv _redirects dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
